# lotto-game

./: README.md  pyproject.toml  requirements.txt
app/: domain.py  main.py  repository.py  runtime.py  service.py
app/api/: errors.py  games.py  schemas.py  speech.py  speech_schemas.py  stats.py
app/domain/: __init__.py  game.py  settlement.py
app/services/: command_parser.py  stats_service.py  transcription_service.py
app/storage/: database.py  models.py  repository.py
frontend/: README.md  index.html  main.js  styles.css
tests/: test_api.py  test_domain.py  test_game_domain.py  test_speech_api.py  test_stats.py
tests/api/: test_games_endpoints.py  test_speech_interpret.py
tests/domain/: test_settlement.py
tests/legacy/: test_legacy_contracts.py
tests/services/: test_command_parser.py  test_stats_service.py
